# uutf

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
example/: CMakeLists.txt  example.c
include/: uutf.h
test/: CMakeLists.txt  test_ASSERT.c  test_ASSERT_EQ.c  test_ASSERT_FALSE.c  test_ASSERT_GT.c  test_ASSERT_LT.c  test_ASSERT_NE.c  test_ASSERT_TRUE.c  uutf_self_test_macros.h
